# cowork-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  rust-toolchain.toml
docs/: project_specs.md
src/: main.rs
src/agent/: agent.rs  agent_orchestrator.rs  agent_preset.rs  agent_tool.rs  mod.rs
src/app/: mod.rs
src/app/components/: chat.rs  mod.rs  sidebar.rs
src/app/theme/: mod.rs
src/repo/: mod.rs  repo.rs  repo_filter.rs  repo_impl.rs  sqlite_db.rs
src/repo/record/: mod.rs  record.rs  record_impl.rs
